немного стилей в формах

--- a/public/pages/page6.html
+++ b/public/pages/page6.html
@@ -24,7 +24,7 @@
   </ul>
 </nav>
 <div class="content">
-  <div class="item"><img class="" src="../images/manga/44347.jpg" alt=""></div>
+  <div class="item"><img class="" src="../images/44347.jpg" alt=""></div>
   <div class="description">
     <h1>Манга: "Ванпанчмен"</h1>
     <h2>Описание:</h2>
